<resources>
    <string name="app_name">Layouts</string>
    <string name="lblTitle">Beauty and the Beast</string>
    <string name="lblDateTime">March 2017 PG 129 minutes</string>
    <string name="btnRent">Rent for 9,99€</string>
    <string name="btnBuy">Buy for 29,99€</string>
    <string name="lblRatings">242 ratings</string>
    <string name="lblFamily">Family</string>
    <string name="lblRottenTomatoes">71%</string>
    <string name="lblSimilar">Similar</string>
    <string name="lblDescription">The story and characters you know and love come to spactacular life in the live-action adaption of Disney\'s animated classic Beauty and the Beast</string>
</resources>