<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/header"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTitle"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/imgBookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bookmark"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/lblDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblDateTime"
            android:paddingVertical="@dimen/margin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/margin">

            <Button
                android:id="@+id/btnRent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/margin"
                android:text="@string/btnRent"/>

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/btnBuy"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_edit_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/lblRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblRatings"
                android:layout_marginTop="@dimen/margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_family"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/lblFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblFamily"
                android:layout_marginTop="@dimen/margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tomato"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/lblRottenTomatoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblRottenTomatoes"
                android:layout_marginTop="@dimen/margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_similar"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/lblSimilar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSimilar"
                android:layout_marginTop="@dimen/margin"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_divider" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x"
        android:text="@string/lblDescription"
        android:textSize="20dp"/>

</LinearLayout>