<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_2x"
        android:paddingTop="@dimen/margin_2x"
        android:text="@string/lblTitle"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgHeader" />

    <ImageView
        android:id="@+id/imgBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_2x"
        android:paddingRight="@dimen/margin_2x"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgHeader" />

    <TextView
        android:id="@+id/lblDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginLeft="@dimen/margin_2x"
        android:text="@string/lblDateTime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTitle" />

    <Button
        android:id="@+id/btnRent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_2x"
        android:layout_marginLeft="@dimen/margin_2x"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/btnRent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuy"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblDateTime" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_2x"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin_2x"
        android:text="@string/btnBuy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btnRent"
        app:layout_constraintTop_toBottomOf="@id/lblDateTime" />

    <View
        android:id="@+id/firstBar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/margin_2x"
        android:background="@color/gray_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/firstCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_marginTop="@dimen/margin_2x"
        app:layout_constraintEnd_toStartOf="@+id/secondCircle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstBar"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/secondCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_family"
        android:layout_marginTop="@dimen/margin_2x"
        app:layout_constraintEnd_toStartOf="@+id/thirdCircle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstCircle"
        app:layout_constraintTop_toBottomOf="@id/firstBar"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/thirdCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tomato"
        android:layout_marginTop="@dimen/margin_2x"
        app:layout_constraintEnd_toStartOf="@+id/fourthCircle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/secondCircle"
        app:layout_constraintTop_toBottomOf="@id/firstBar"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fourthCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_similar"
        android:layout_marginTop="@dimen/margin_2x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thirdCircle"
        app:layout_constraintTop_toBottomOf="@id/firstBar"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/lblRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRatings"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/firstCircle"
        app:layout_constraintLeft_toLeftOf="@id/firstCircle"
        app:layout_constraintRight_toRightOf="@id/firstCircle"/>

    <TextView
        android:id="@+id/lblFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblFamily"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/secondCircle"
        app:layout_constraintLeft_toLeftOf="@id/secondCircle"
        app:layout_constraintRight_toRightOf="@id/secondCircle"/>

    <TextView
        android:id="@+id/lblRottenTomatoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRottenTomatoes"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/thirdCircle"
        app:layout_constraintLeft_toLeftOf="@id/thirdCircle"
        app:layout_constraintRight_toRightOf="@id/thirdCircle"/>

    <TextView
        android:id="@+id/lblSimilar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSimilar"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/fourthCircle"
        app:layout_constraintLeft_toLeftOf="@id/fourthCircle"
        app:layout_constraintRight_toRightOf="@id/fourthCircle"/>

    <View
        android:id="@+id/secondBar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/margin_2x"
        android:background="@color/gray_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblRatings"/>

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x"
        android:text="@string/lblDescription"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/secondBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>